--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,9 +5,17 @@
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
         <item name="android:statusBarColor">@color/shake_color_primary</item>
         <item name="android:colorAccent">@color/shake_color_primary</item>
-        <item name="backgroundColor">@color/shake_color_primary</item>
-        <item name="background">@color/shake_color_primary</item>
+        <item name="android:background">@color/shake_color_primary</item>
         <item name="android:colorEdgeEffect">@color/shake_color_primary</item>
+    </style>
+
+    <style name="shake_AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="NavigationTheme" parent="shake_AppTheme">
+        <item name="listPreferredItemHeightSmall">60dp</item>
     </style>
 
     <!-- Text styles -->
