--- a/app/src/main/res/layout/fragment_crash.xml
+++ b/app/src/main/res/layout/fragment_crash.xml
@@ -78,6 +78,7 @@
                 android:id="@+id/crash_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@android:color/transparent"
                 tools:listitem="@layout/fragment_step" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
