--- a/app/src/main/res/layout/fragment_customize.xml
+++ b/app/src/main/res/layout/fragment_customize.xml
@@ -77,6 +77,7 @@
                 android:id="@+id/customize_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@android:color/transparent"
                 tools:listitem="@layout/fragment_step" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
