--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -87,6 +87,7 @@
                 android:id="@+id/welcome_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@android:color/transparent"
                 tools:listitem="@layout/fragment_step" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
