--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="nav_header_vertical_spacing">15dp</dimen>
     <dimen name="nav_header_height">155dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="settings_layout_height">48dp</dimen>
 </resources>
