--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:theme="@style/NavigationTheme"
         android:background="@color/shake_color_primary"
         app:headerLayout="@layout/nav_header_main"
-        app:itemTextAppearance="@style/shake_sdk_Subtitle1"
+        app:itemTextAppearance="@style/shake_Subtitle1"
         app:itemTextColor="@color/shake_body_color"
         app:itemBackground="@drawable/drawer_selected_item"
         app:menu="@menu/activity_main_drawer" />
